# fspec

./: .gitignore  .npmignore  .prettierrc  AGENTS.md  BUG-ANALYSIS.md  BUILD.md  CLAUDE-compaction1.md  CLAUDE.md  GLM-compaction1.md  GLM-compaction2.md  JOURNAL.md  LICENSE  MERMAID_VALIDATION_BUG_INVESTIGATION.md  MIGRATION-GUIDE.md  OPTIMIZE.md  README.md  RES-018-unconfigured-tool-visibility-research.md  REVERSE_ACDD_FIXES.md  REVERSE_ACDD_PROBLEMS_ANALYSIS.md  RLM.md  This Will Surprise YOU… [QQ4FyCQ-eOQ].en.vtt  ai-feedback-on-documentation.md  args.gn  bug-031-investigation-findings.md  bug-075-ast-tool-investigation.md  bug-081-investigation-findings.md  bug-report-BUG-047.md  bug-report-ast-research-tool.md  compaction-limits.md  debug-emoji-border.tsx  dev-board-new.tsx  dev-layout-new.tsx  dev-tui.tsx  errors.txt  eslint.config.js  fails.txt  fix-fixtures.py  fixes.txt  full-test-output.txt  fullscreen-mermaid-viewer-research.md  (+23 more)
codelet/: .gitignore  COMPACTION_FIX.md  COMPARISON_ANALYSIS.md  Cargo.toml  compaction-bugs.md  debug_websearch.rs  fspec-callback.ts  issues.md  problem.md  provider-init.ts  test_multiline.js  test_websearch_json.json  tokens.md
codelet/benches/: token_tracking.rs
codelet/cli/: Cargo.toml
codelet/cli/src/: compaction_threshold.rs  diff.rs  error_display.rs  highlight.rs  interactive.rs  interactive_helpers.rs  large_write_intent.rs  lib.rs  main.rs  terminal.rs  tests.rs
codelet/cli/tests/: autocompact_buffer_test.rs  context_compaction_fix_test.rs  context_window_limits_test.rs  empty_turn_compaction_fix_test.rs  env_config_test.rs  gemini_continuation_compaction_test.rs  integration_test.rs  large_write_intent_test.rs  manual_compaction_command_test.rs  pre_prompt_compaction_test.rs  prompt_cache_control_test.rs  prompt_too_long_recovery_test.rs  provider_manager_test.rs  refactor_god_objects_test.rs  remove_output_mutators_test.rs  stream_loop_pause_test.rs  system_reminder_cache_preservation_test.rs  system_reminder_infrastructure_test.rs  threshold_calculation_typescript_match_test.rs  token_estimator_test.rs  token_inflation_bug_test.rs  tool_display_test.rs  verify_rig_reexport.rs
codelet/common/: Cargo.toml
codelet/common/src/: debug_capture.rs  lib.rs  token_estimator.rs  types.rs  web_search.rs
codelet/core/: Cargo.toml
codelet/core/src/: compaction.rs  compaction_hook.rs  gemini_history_hook.rs  lib.rs  message_estimator.rs  rig_agent.rs  token_usage.rs  tool_specs.rs
codelet/core/tests/: agent_multi_turn_test.rs  cache_token_extraction_test.rs  context_compaction_test.rs  retry_llm_summary_test.rs  rig_agent_multi_turn_test.rs  rig_dependency_test.rs  rig_provider_streaming_test.rs  token_tracker_update_test.rs
codelet/docs/bugs/: TOKEN-INFLATION-BUG.md
codelet/examples/: agent_tool_calling.rs  demo_compaction.rs  demo_diff_rendering.rs  detailed_demo.rs  openai_demo.rs  test_all_17_events.rs  test_all_tools.rs  test_debug_e2e.rs  test_text_styling.rs
codelet/future/: mindmirror-braiding.md  mindmirror-ddd.md  mindmirror-detail.md  mindmirror-use.md
codelet/napi/: Cargo.toml  Cross.toml  DEVELOPMENT.md  Dockerfile.cross  Dockerfile.windows  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
codelet/napi/scripts/: build-all-platforms.sh
codelet/napi/src/: astgrep.rs  fspec.rs  glob.rs  lib.rs  models.rs  navigation.rs  output.rs  session.rs  session_manager.rs  simple_test.rs  thinking_config.rs  types.rs
codelet/napi/tests/: clear_history_context_test.rs  napi_interrupt_test.rs  navigation_hierarchy_test.rs  pause_integration_test.rs  pause_napi_api_test.rs  rust_log_filter_test.rs  session_manager_context_injection_test.rs  session_navigation_test.rs  session_pause_state_test.rs  session_restore_messages_test.rs  session_rust_state_test.rs  session_token_restore_test.rs  watcher_interjection_test.rs
codelet/patches/: rig-core.patch
codelet/patches/rig-core/: Cargo.toml
codelet/providers/: Cargo.toml
codelet/providers/src/: adapter.rs  cache_token_extractor.rs  caching_client.rs  claude.rs  credentials.rs  error.rs  gemini.rs  lib.rs  manager.rs  openai.rs  zai.rs
codelet/providers/tests/: caching_http_middleware_test.rs  claude_oauth_test.rs  model_selection_test.rs  provider_facade_integration_test.rs  zai_provider_test.rs
codelet/spec/: FOUNDATION.md  TAGS.md  epics.json  foundation.json  fspec-config.json  prefixes.json  tags.json  work-units.json
codelet/spec/docs/: REFAC-013-architectural-refactoring-plan.md
codelet/spec/features/: add-anthropic-prompt-cache-control-metadata.feature  add-anthropic-prompt-cache-control-metadata.feature.coverage  add-large-write-intent-detection-and-chunking-guidance.feature  add-large-write-intent-detection-and-chunking-guidance.feature.coverage  add-ls-tool-for-directory-listing.feature  add-ls-tool-for-directory-listing.feature.coverage  add-rig-core-dependency-and-compatibility-layer.feature  anthropic-cache-control.feature  (+104 more)
codelet/test_debug/: Cargo.toml
codelet/tests/: agent_multi_turn_test.rs  agent_runner_test.rs  astgrep_tool_test.rs  autocompact_buffer_test.rs  bash_tool_test.rs  cache_token_extraction_test.rs  claude_oauth_test.rs  claude_provider_test.rs  codex_provider_test.rs  context_compaction_test.rs  context_gathering_test.rs  context_window_limits_test.rs  core_file_tools_test.rs  debug_capture_test.rs  diff_rendering_e2e_test.rs  diff_rendering_integration_test.rs  env_config_test.rs  gemini_provider_test.rs  grep_glob_tools_test.rs  integration_test.rs  integration_wiring_test.rs  interactive_compaction_integration_test.rs  large_write_intent_test.rs  logging_system_test.rs  openai_provider_test.rs  project_scaffold_test.rs  prompt_cache_control_test.rs  provider_manager_test.rs  retry_llm_summary_test.rs  rig_agent_multi_turn_test.rs  rig_dependency_test.rs  rig_provider_streaming_test.rs  system_reminder_cache_preservation_test.rs  system_reminder_infrastructure_test.rs  text_styling_test.rs  tool_display_test.rs  verify_rig_reexport.rs
codelet/tools/: Cargo.toml
codelet/tui/: Cargo.toml
(+2605 files in other folders)
