[package]
name = "codelet-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Common utilities for codelet - logging, context, session management"

[dependencies]
# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Configuration
dirs.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true

# Token Estimation (PROV-002)
tiktoken-rs.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
