[package]
name = "codelet-napi"
version = "0.1.0"
edition = "2021"
description = "NAPI-RS bindings for codelet AI agent"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS v3 with async support for proper streaming
napi = { version = "3", default-features = false, features = ["napi4", "async", "tokio_rt"] }
napi-derive = "3"

# Codelet crates
codelet-cli = { path = "../cli" }
codelet-core = { path = "../core" }
codelet-providers = { path = "../providers" }
codelet-tools = { path = "../tools" }
codelet-common = { path = "../common" }

# Rig - LLM framework (workspace version with patch)
rig-core = { version = "0.25.0", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"

# Serialization (for converting types)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Environment
dotenvy = "0.15"

# Persistence module dependencies
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6"
lazy_static = "1.4"

[dev-dependencies]

[build-dependencies]
napi-build = "2"
