[package]
name = "codelet-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool implementations for codelet - file ops, code search, bash execution"

[dependencies]
codelet-common.workspace = true

# HTTP client for web search
reqwest.workspace = true

# Chrome DevTools Protocol (WEB-002)
headless_chrome.workspace = true

# URL encoding for search queries
urlencoding = "2.1"

# URL parsing for tool facades
url = "2.5"

# LLM Integration (for rig::tool::Tool trait)
rig-core.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# File Operations
glob.workspace = true
ignore.workspace = true
globset.workspace = true

# Ripgrep Core
grep-regex.workspace = true
grep-searcher.workspace = true
grep-matcher.workspace = true

# AST-based Code Search
ast-grep-core.workspace = true
ast-grep-language.workspace = true

# Utilities
regex.workspace = true
uuid.workspace = true
chrono.workspace = true

# Base64 encoding for multimodal content
base64 = "0.22"

# PDF Reading (TOOLS-002)
lopdf.workspace = true
pdfium-render.workspace = true
image.workspace = true

# Signal handling for browser cleanup
ctrlc.workspace = true

# Unix process management (for process group killing)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serial_test.workspace = true
lopdf.workspace = true

[lints]
workspace = true
